[metadata]
name = tm-python
description = Meta package providing Python bindings for tmTable, tmGrammar and tmEventSetup.
long_description = file: README.md
long_description_content_type = text/markdown
author = Bernhard Arnold
author_email = bernhard.arnold@cern.ch
url = https://github.com/cms-l1-globaltrigger/tm-python
license = GPLv3
