[metadata]
name = tm-python
version = 0.12.0
description = Meta package providing Python bindings for tm-table, tm-grammar and tm-eventsetup.
long_description = file: README.md
long_description_content_type = text/markdown
author = Bernhard Arnold
author_email = bernhard.arnold@cern.ch
url = https://github.com/cms-l1-globaltrigger/tm-python
license = GPLv3

[options]
install_requires =
   tm-table==0.12.0
   tm-grammar==0.12.0
   tm-eventsetup==0.12.0
python_requires = >=3.6
